--- a/work_2.html
+++ b/work_2.html
@@ -9,7 +9,17 @@
 </head>
 
 <body>
+    <div class="api_nasa">
+        <div class="name"></div>
+        <div class="asteroid"> </div>
+        <div class="avtor"></div>
+        <div class="text"></div>
 
+        <img src="" id="photo">
+
+    </div>
+
+    <script src="werk_2.js"></script>
 </body>
 
 </html>
