--- a/work_2.html
+++ b/work_2.html
@@ -6,17 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        img {
+            height: 50%;
+            width: 50%;
+            text-align: center;
+        }
+
+        body {
+            background-color: rgba(91, 32, 146, 0.897);
+        }
+    </style>
 </head>
 
 <body>
     <div class="api_nasa">
-        <div class="name"></div>
-        <div class="asteroid"> </div>
+        <H1 style="text-align: center;">
+            <div class="name"></div>
+        </H1>
+        <div class="asteroid"> </div><br>
         <div class="avtor"></div>
-        <div class="text"></div>
-
-        <img src="" id="photo">
-
+        <p>
+            <div class="text"></div><br>
+        </p>
+        <div>
+            <img src="" id="photo">
+        </div>
     </div>
 
     <script src="werk_2.js"></script>
